ProblemD: add deduction

--- a/ProblemD/ProblemD.csproj
+++ b/ProblemD/ProblemD.csproj
@@ -49,6 +49,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Existence.proof">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Universal.proof">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="test.in">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
